# space_pixels

./: CMakeLists.txt  ConfigureVS.cmake  LICENSE.md  README.md  build_vs.bat
_build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  space_pixels.sln
_build_vs/application/: application.vcxproj  application.vcxproj.filters  cmake_install.cmake
application/: CMakeLists.txt
application/src/: main.c  settings.h
application/src/game/: game_common.c  game_common.h  input.c  input.h
application/src/game/level/: bullet.c  bullet.h  enemy.c  enemy.h  item.c  item.h  level.c  level.h  level_scene.c  level_scene.h  level_ui.c  level_ui.h  player.c  player.h
application/src/game/title/: title_scene.c  title_scene.h  title_ui.c  title_ui.h
application/src/utils/: asset_manager.c  asset_manager.h  axis.c  axis.h  camera.c  camera.h  common.c  common.h  gizmos.c  gizmos.h  math.c  math.h  sprite_anim.c  sprite_anim.h  text.c  text.h  timer.c  timer.h
assets/: LICENSE.md
